Bug 1715771 - Cherry-pick changes from https://gitlab.freedesktop.org/cairo/cairo/-/merge_requests/196 to avoid breakage when tagging PDF output. r=jrmuizel

Depends on D120214

Differential Revision: https://phabricator.services.mozilla.com/D120215