gfx/cairo/cairo/src/cairo-surface-wrapper-private.h
@@ -163,12 +163,7 @@ cairo_private cairo_status_t
 _cairo_surface_wrapper_tag (cairo_surface_wrapper_t     *wrapper,
 			    cairo_bool_t                 begin,
 			    const char                  *tag_name,
-			    const char                  *attributes,
-			    const cairo_pattern_t	*source,
-			    const cairo_stroke_style_t	*stroke_style,
-			    const cairo_matrix_t	*ctm,
-			    const cairo_matrix_t	*ctm_inverse,
-			    const cairo_clip_t		*clip);
+			    const char                  *attributes);
 
 cairo_private cairo_surface_t *
 _cairo_surface_wrapper_create_similar (cairo_surface_wrapper_t *wrapper,
